# github-workflow-test

./: .pre-commit-config.yaml  CODEOWNERS  main.py  pyproject.toml
.github/: CODEOWNERS  mergeable.yml
.github/workflows/: code-quality.yml
src/backend/: backend.toml  functions.py  test.toml
src/frontend/: functions.py  test.toml
